Fix FacetFilter spacing
git-svn-id: http://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@71358 7033f55c-6c29-4ad8-afba-765cb616e738

--- a/root/projects/slingshot/source/web/js/alfresco/documentlibrary/css/AlfDocumentFilters.css
+++ b/root/projects/slingshot/source/web/js/alfresco/documentlibrary/css/AlfDocumentFilters.css
@@ -5,15 +5,14 @@
 
 .alfresco-documentlibrary-AlfDocumentFilters:last-child {
   border-radius: 0 0 5px 5px;
-  border-bottom: 1px solid #DCD8D8;
+  border-bottom: @standard-border;
 }
 
 .alfresco-documentlibrary-AlfDocumentFilters {
-   border: 1px solid #DCD8D8;
+   border: @standard-border;
    width: 320px;
    padding: 5px;
    border-bottom: none;
-   padding: 15px 5px;
    display: block;
 }
 
@@ -31,7 +30,7 @@
    font-size: @normal-font-size;
    font-weight: normal;
    margin-bottom: @standard-line-height;
-   margin-left: 15px;
+   margin-left: @standard-column-width;
 }
 
 .alfresco-documentlibrary-AlfDocumentFilters ul.filters li.showMore,
